created apis for dashboard